--- a/app/src/main/res/layout/item_user.xml
+++ b/app/src/main/res/layout/item_user.xml
@@ -1,30 +1,27 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
-    android:padding="12dp"
-    android:background="#EEEEEE"
-    android:layout_margin="8dp"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_margin="10dp"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
 
-    <TextView
-        android:id="@+id/txtName"
-        android:textStyle="bold"
-        android:textSize="18sp"
-        android:textColor="#000"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+    >
 
-    <TextView
-        android:id="@+id/txtEmail"
-        android:textSize="14sp"
-        android:textColor="#333"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+    <androidx.cardview.widget.CardView
+        android:layout_width="130dp"
+        android:layout_height="60dp"
+        app:cardCornerRadius="15dp"
+        >
 
-    <TextView
-        android:id="@+id/txtPhone"
-        android:textSize="14sp"
-        android:textColor="#666"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        <ImageView
+            android:id="@+id/ItemImages"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:src="@drawable/ic_launcher_background"
+            android:scaleType="centerCrop"
+            />
+
+    </androidx.cardview.widget.CardView>
+
+
 </LinearLayout>
