--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -2,23 +2,23 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/home"
+        android:id="@+id/homeIcon"
         android:title="Home"
         android:icon="@drawable/baseline_home_24"
         />
     <item
-        android:id="@+id/home2"
-        android:title="Home"
-        android:icon="@drawable/baseline_home_24"
+        android:id="@+id/exploreIcon"
+        android:title="explore"
+        android:icon="@drawable/img_4"
         />
     <item
-        android:id="@+id/home3"
-        android:title="Home"
-        android:icon="@drawable/baseline_home_24"
+        android:id="@+id/premiumIcon"
+        android:title="premium"
+        android:icon="@drawable/img_1"
         />
     <item
-        android:id="@+id/home4"
-        android:title="Home"
-        android:icon="@drawable/baseline_home_24"
+        android:id="@+id/profileIcon"
+        android:title="profile"
+        android:icon="@drawable/img_5"
         />
 </menu>
