--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -10,16 +10,18 @@
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="100dp"
-        android:layout_margin="10dp"
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp"
+        android:layout_marginTop="10dp"
         android:id="@+id/popularImages"
         />
 
    <LinearLayout
        android:layout_width="match_parent"
-       android:layout_height="30dp"
+       android:layout_height="25dp"
        android:orientation="horizontal"
-       android:layout_marginLeft="10dp"
-       android:layout_marginRight="10dp"
+       android:layout_marginLeft="5dp"
+       android:layout_marginRight="5dp"
        >
        <TextView
            android:layout_width="wrap_content"
@@ -44,7 +46,8 @@
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="60dp"
-        android:layout_margin="10dp"
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp"
         android:id="@+id/CategoryRecyclerview"
         />
 
