--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".FragmentManager.Profile_Fragment">
 
     <Button
@@ -10,18 +12,30 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
-        android:text="Show Ad"
-        android:textSize="15sp"
-        />
+        android:text="showInterstitialAd"
+        android:textSize="15sp" />
 
-
-    <LinearLayout
+    <Button
+        android:id="@+id/showRewardedAd"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_margin="10dp"
+        android:text="showRewardedAd"
+        android:textSize="15sp" />
+
+    <com.google.android.ads.nativetemplates.TemplateView
+        android:id="@+id/my_template"
+        android:layout_width="match_parent"
+        android:layout_height="400dp"
+        app:gnt_template_type="@layout/gnt_medium_template_view"
+        android:visibility="gone"
+        />
+
+    <LinearLayout
         android:id="@+id/adContainer"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="vertical" />
 
 
-
-
-</RelativeLayout>
+</LinearLayout>
