--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -7,14 +7,14 @@
     android:layout_height="match_parent"
     tools:context=".HomeActivity"
     android:orientation="vertical"
-    android:background="#C7CFFBFA"
+    android:background="#FFF5F7"
     >
 
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
-       android:background="#F8F1FF">
+       android:background="#FFF5F7">
 
 
        <LinearLayout
@@ -22,7 +22,7 @@
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:gravity="center|right"
-           android:background="#C7CFFBFA"
+           android:background="#FFF5F7"
            >
 
            <LinearLayout
@@ -46,7 +46,7 @@
                android:id="@+id/premiumIcon"
                android:layout_width="30dp"
                android:layout_height="30dp"
-               android:src="@drawable/img_1"
+               android:src="@drawable/img_7"
                android:layout_margin="10dp"
                />
 
@@ -101,6 +101,7 @@
                    app:menu="@menu/nav_items"
                    app:itemIconTint="#FAAA91"
 
+
                    />
 
 
@@ -117,7 +118,7 @@
                app:menu="@menu/bottom_nav_menu"
                app:itemIconTint="#FAAA91"
                android:pointerIcon="zoom_in"
-               android:background="#C7CFFBFA"
+               android:background="#FFF5F7"
                android:layout_above="@id/drawerlayout"
                />
 
