--- a/app/src/main/res/layout/category_layout.xml
+++ b/app/src/main/res/layout/category_layout.xml
@@ -5,23 +5,29 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_margin="5dp">
 
-    <androidx.cardview.widget.CardView
-        android:layout_width="60dp"
-        android:layout_height="25dp"
-        app:cardCornerRadius="7dp"
-        android:backgroundTint="#A4E5ED"
-        android:id="@+id/item_click"
-        >
 
+
+    <LinearLayout
+        android:layout_width="70dp"
+        android:layout_height="30dp"
+        android:id="@+id/item_click"
+        android:background="?attr/selectableItemBackground"
+        android:clickable="true"
+        android:focusable="true"
+        >
         <TextView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:gravity="center"
-            android:textSize="10sp"
             android:id="@+id/CategoryTitle"
-            android:fontFamily="@font/khair"/>
+            />
+    </LinearLayout>
 
-    </androidx.cardview.widget.CardView>
+
+
+
+
+
 
 
 
