--- a/app/src/main/res/drawable/category_backgournd.xml
+++ b/app/src/main/res/drawable/category_backgournd.xml
@@ -9,7 +9,7 @@
     <solid android:color="#FFFFFF" />
     <stroke
         android:width="1dp"
-        android:color="#9CDEFB"/>
+        android:color="#0AEFE9"/>
 
 
 
