--- a/app/src/main/res/drawable/dialog_bg.xml
+++ b/app/src/main/res/drawable/dialog_bg.xml
@@ -7,16 +7,10 @@
 
     <!-- শুধু টপ কর্নারগুলো কার্ভ -->
     <corners
-        android:topLeftRadius="25dp"
-        android:topRightRadius="25dp"
-        android:bottomLeftRadius="0dp"
-        android:bottomRightRadius="0dp" />
+        android:radius="10dp"
+         />
 
-    <!-- ঐচ্ছিক shadow effect -->
-    <padding
-        android:left="2dp"
-        android:top="2dp"
-        android:right="2dp"
-        android:bottom="2dp" />
+
+
 
 </shape>
