--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -5,128 +5,129 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".HomeActivity"
+    tools:context=".activity.HomeActivity"
     android:orientation="vertical"
     android:background="#FFF5F7"
     >
 
-   <LinearLayout
-       android:layout_width="match_parent"
-       android:layout_height="match_parent"
-       android:orientation="vertical"
-       android:background="#FFF5F7">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:background="#FFF5F7">
 
 
-       <LinearLayout
-           android:layout_width="match_parent"
-           android:layout_height="50dp"
-           android:orientation="horizontal"
-           android:gravity="center|right"
-           android:background="#FFF5F7"
-           >
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:orientation="horizontal"
+            android:gravity="center|right"
+            android:background="#FFF5F7"
+            >
 
-           <LinearLayout
-               android:layout_width="match_parent"
-               android:layout_height="match_parent"
-               android:gravity="center|left"
-               android:orientation="vertical"
-               >
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center|left"
+                android:orientation="vertical"
+                >
 
-               <ImageView
-                   android:id="@+id/homeIcon"
-                   android:layout_width="30dp"
-                   android:layout_height="30dp"
-                   android:src="@drawable/img_3"
-                   android:layout_marginLeft="110dp"
-                   />
-
-
-           </LinearLayout>
-           <ImageView
-               android:id="@+id/premiumIcon"
-               android:layout_width="30dp"
-               android:layout_height="30dp"
-               android:src="@drawable/img_7"
-               android:layout_margin="10dp"
-               />
-
-           <ImageView
-               android:id="@+id/profileIcon"
-               android:layout_width="30dp"
-               android:layout_height="30dp"
-               android:src="@drawable/img"
-               android:layout_margin="10dp"
-               />
+                <ImageView
+                    android:id="@+id/homeIcon"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:src="@drawable/img_9"
+                    android:layout_marginLeft="110dp"
+                    />
 
 
+            </LinearLayout>
+            <ImageView
+                android:id="@+id/premiumIcon"
+                android:layout_width="25dp"
+                android:layout_height="25dp"
+                android:src="@drawable/img_12"
+                android:layout_margin="10dp"
+                />
 
-
-
-
-       </LinearLayout>
-
-       <RelativeLayout
-           android:layout_width="match_parent"
-           android:layout_height="match_parent"
-           android:background="#fff"
-           >
-           <androidx.drawerlayout.widget.DrawerLayout
-               android:id="@+id/drawerlayout"
-               android:layout_width="match_parent"
-               android:layout_height="match_parent"
-
-               >
-               <androidx.coordinatorlayout.widget.CoordinatorLayout
-                   android:layout_width="match_parent"
-                   android:layout_height="match_parent"
-                   >
-
-
-
-                   <FrameLayout
-                       android:id="@+id/FrameLayout"
-                       android:layout_width="match_parent"
-                       android:layout_height="match_parent"
-                       
-                       />
-
-               </androidx.coordinatorlayout.widget.CoordinatorLayout>
-
-               <com.google.android.material.navigation.NavigationView
-                   android:id="@+id/NavigationView"
-                   android:layout_width="wrap_content"
-                   android:layout_height="match_parent"
-                   android:layout_gravity="start"
-                   app:headerLayout="@layout/nav_header"
-                   app:menu="@menu/nav_items"
-                   app:itemIconTint="#FAAA91"
-
-
-                   />
+            <ImageView
+                android:id="@+id/profileIcon"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:src="@drawable/img"
+                android:layout_margin="10dp"
+                />
 
 
 
 
 
-           </androidx.drawerlayout.widget.DrawerLayout>
 
-           <com.google.android.material.bottomnavigation.BottomNavigationView
-               android:id="@+id/bottomnavigation"
-               android:layout_width="match_parent"
-               android:layout_height="wrap_content"
-               android:layout_alignParentBottom="true"
-               app:menu="@menu/bottom_nav_menu"
-               app:itemIconTint="#FAAA91"
-               android:pointerIcon="zoom_in"
-               android:background="#FFF5F7"
-               android:layout_above="@id/drawerlayout"
-               />
+        </LinearLayout>
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="#fff"
+            >
+            <androidx.drawerlayout.widget.DrawerLayout
+                android:id="@+id/drawerlayout"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+
+                >
+                <androidx.coordinatorlayout.widget.CoordinatorLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    >
 
 
-       </RelativeLayout>
+
+                    <FrameLayout
+                        android:id="@+id/FrameLayout"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+
+                        />
+
+                </androidx.coordinatorlayout.widget.CoordinatorLayout>
+
+                <com.google.android.material.navigation.NavigationView
+                    android:id="@+id/NavigationView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="start"
+                    app:headerLayout="@layout/nav_header"
+                    app:menu="@menu/nav_items"
+                    app:itemIconTint="#AEFAAA91"
 
 
-   </LinearLayout>
+                    />
+
+
+
+
+
+            </androidx.drawerlayout.widget.DrawerLayout>
+
+            <com.google.android.material.bottomnavigation.BottomNavigationView
+                android:id="@+id/bottomnavigation"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                app:menu="@menu/bottom_nav_menu"
+                app:itemIconTint="#1DFDF8"
+                app:itemTextColor="#0AEFE9"
+                android:pointerIcon="zoom_in"
+                android:background="#FFF5F7"
+                android:layout_above="@id/drawerlayout"
+                />
+
+
+        </RelativeLayout>
+
+
+    </LinearLayout>
 
 
 
