--- a/app/src/main/res/layout/sheet_layout.xml
+++ b/app/src/main/res/layout/sheet_layout.xml
@@ -128,6 +128,7 @@
                 android:layout_height="wrap_content"
                 android:inputType="textPassword"
                 android:windowSoftInputMode="adjustPan"
+                android:maxLength="8"
                 />
 
         </com.google.android.material.textfield.TextInputLayout>
@@ -317,6 +318,7 @@
                 android:layout_height="wrap_content"
                 android:inputType="textPassword"
                 android:windowSoftInputMode="adjustPan"
+                android:maxLength="8"
                 />
 
         </com.google.android.material.textfield.TextInputLayout>
