--- a/app/src/main/res/layout/custom_toast_layout.xml
+++ b/app/src/main/res/layout/custom_toast_layout.xml
@@ -9,13 +9,13 @@
         android:layout_width="190dp"
         android:layout_height="30dp"
         android:layout_margin="10dp"
-        android:background="@drawable/toast_bg"
+        android:background="@drawable/customtostbag"
         >
 
         <View
             android:layout_width="1dp"
             android:layout_height="match_parent"
-            android:background="@color/gnt_green"
+            android:background="@color/premium_green"
             android:layout_marginLeft="3dp"
             android:layout_marginTop="3dp"
             android:layout_marginBottom="3dp"
@@ -35,7 +35,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Successfully added!"
-            android:textColor="#4CAF50"
+            android:textColor="#F4F8F5"
             android:textSize="15sp"
             android:gravity="center"
             android:layout_gravity="center"
